infrastructure/networking/argocd-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: argocd

  hostnames:
    - argocd.homelab.local

  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
